--- a/files/waybar/style.css
+++ b/files/waybar/style.css
@@ -8,6 +8,7 @@
   font-size: 14px;
   font-weight: 500;
   transition: all 0.5s ease;
+  background-color: #131313;
 }
 
 #workspaces button {
@@ -41,20 +42,16 @@
   /* margin: 2px 6px 6px 8px; */
 }
 
-#workspaces button.focused {
-  border-radius: 20px;
-  /* background-color: @flamingo; */
-}
-
 #workspaces button.focused * {
   color: @green;
+  border-radius: 20px;
 }
 
-#workspaces button.urgent {
+#workspaces button.urgent * {
   color: @red;
 }
 #workspaces button.peristent * {
-  color: whitesmoke;
+  color: #131313;
 }
 
 #backlight {
@@ -79,6 +76,7 @@
   border: none;
   box-shadow: none;
   border-radius: 8px;
+  background-color: whitesmoke;
 }
 #backlight-slider trough {
   min-height: 14px;
@@ -121,6 +119,7 @@
 #tray,
 #language,
 #custom-screenrecorder,
+#custom-notification,
 #mpd {
   padding: 0px 8px;
   border-style: solid;
